--- a/archives/toutiao-search/2023-11-12.md
+++ b/archives/toutiao-search/2023-11-12.md
@@ -1,58 +1,76 @@
 # 2023-11-12
 
-共 340 条
+共 356 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sun Nov 12 2023 21:02:51 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sun Nov 12 2023 22:14:58 GMT+0800 (China Standard Time) -->
 1. [警方公开通缉缅北果敢4名电诈头目](https://so.toutiao.com/search?keyword=警方公开通缉缅北果敢4名电诈头目)
 1. [大妈买海鱼红烧后半夜发绿光](https://so.toutiao.com/search?keyword=大妈买海鱼红烧后半夜发绿光)
-1. [飞虎队记忆](https://so.toutiao.com/search?keyword=飞虎队记忆)
+1. [100秒速览中国十年“网事”](https://so.toutiao.com/search?keyword=100秒速览中国十年“网事”)
 1. [阿里回应多款产品“崩了”](https://so.toutiao.com/search?keyword=阿里回应多款产品“崩了”)
-1. [菲警方发现6具遗体 2名死者为中国人](https://so.toutiao.com/search?keyword=菲警方发现6具遗体+2名死者为中国人)
-1. [大批中国公民滞留俄罗斯？官方回应](https://so.toutiao.com/search?keyword=大批中国公民滞留俄罗斯？官方回应)
-1. [地震频发 冰岛进入紧急状态](https://so.toutiao.com/search?keyword=地震频发+冰岛进入紧急状态)
 1. [低价硝烟下天猫京东公布双11战绩](https://so.toutiao.com/search?keyword=低价硝烟下天猫京东公布双11战绩)
+1. [官方通报企业家跳楼身亡：正调查](https://so.toutiao.com/search?keyword=官方通报企业家跳楼身亡：正调查)
+1. [菲警方发现6具遗体 2名死者为中国人](https://so.toutiao.com/search?keyword=菲警方发现6具遗体+2名死者为中国人)
 1. [男子杀人逃深山 养8只恶犬防身](https://so.toutiao.com/search?keyword=男子杀人逃深山+养8只恶犬防身)
-1. [男子喂猪时晕倒 遭猪啃食下半身](https://so.toutiao.com/search?keyword=男子喂猪时晕倒+遭猪啃食下半身)
+1. [起底贩卖出生证的佛山福爱嘉医院](https://so.toutiao.com/search?keyword=起底贩卖出生证的佛山福爱嘉医院)
+1. [大批中国公民滞留俄罗斯？官方回应](https://so.toutiao.com/search?keyword=大批中国公民滞留俄罗斯？官方回应)
 1. [媒体：加沙巷战以军“不败而败”](https://so.toutiao.com/search?keyword=媒体：加沙巷战以军“不败而败”)
 1. [广州一工地挖破燃气管道？假的](https://so.toutiao.com/search?keyword=广州一工地挖破燃气管道？假的)
 1. [镇长砸水瓶后村民拍桌回怼？当地回应](https://so.toutiao.com/search?keyword=镇长砸水瓶后村民拍桌回怼？当地回应)
-1. [东北一校8名男生集体穿军大衣上课](https://so.toutiao.com/search?keyword=东北一校8名男生集体穿军大衣上课)
-1. [双11京东手机销量榜：小米14第七](https://so.toutiao.com/search?keyword=双11京东手机销量榜：小米14第七)
-1. [广东最低温将出现在周二](https://so.toutiao.com/search?keyword=广东最低温将出现在周二)
-1. [老人反对装电梯建好又想用被拒绝](https://so.toutiao.com/search?keyword=老人反对装电梯建好又想用被拒绝)
-1. [这届年轻人双11消费变了](https://so.toutiao.com/search?keyword=这届年轻人双11消费变了)
-1. [美加州郡长：对中国有意见你去过吗](https://so.toutiao.com/search?keyword=美加州郡长：对中国有意见你去过吗)
-1. [周也吃相被吐槽](https://so.toutiao.com/search?keyword=周也吃相被吐槽)
-1. [以总理：战后加沙将“非军事化”](https://so.toutiao.com/search?keyword=以总理：战后加沙将“非军事化”)
-1. [京东数据：双11湖北购买力全国第十](https://so.toutiao.com/search?keyword=京东数据：双11湖北购买力全国第十)
-1. [网友不满杜兰特与詹姆斯比赛中谈笑](https://so.toutiao.com/search?keyword=网友不满杜兰特与詹姆斯比赛中谈笑)
-1. [以总理：将在必要时坚定与世界对抗](https://so.toutiao.com/search?keyword=以总理：将在必要时坚定与世界对抗)
-1. [记者探访取暖问题遭物业恐吓](https://so.toutiao.com/search?keyword=记者探访取暖问题遭物业恐吓)
-1. [女子看守所探监 等待中吸毒被捕](https://so.toutiao.com/search?keyword=女子看守所探监+等待中吸毒被捕)
-1. [巴称加沙网络和通信16日将完全停止](https://so.toutiao.com/search?keyword=巴称加沙网络和通信16日将完全停止)
 1. [利好来了 下周A股会起飞吗](https://so.toutiao.com/search?keyword=利好来了+下周A股会起飞吗)
-1. [东北大哥雪洞里吃火锅](https://so.toutiao.com/search?keyword=东北大哥雪洞里吃火锅)
-1. [官方通报企业家跳楼身亡：正调查](https://so.toutiao.com/search?keyword=官方通报企业家跳楼身亡：正调查)
-1. [黑龙江鸡西一批单位清雪不力被通报](https://so.toutiao.com/search?keyword=黑龙江鸡西一批单位清雪不力被通报)
-1. [拜登出席活动“犯迷糊”来回徘徊](https://so.toutiao.com/search?keyword=拜登出席活动“犯迷糊”来回徘徊)
+1. [美加州郡长：对中国有意见你去过吗](https://so.toutiao.com/search?keyword=美加州郡长：对中国有意见你去过吗)
+1. [女子看守所探监 等待中吸毒被捕](https://so.toutiao.com/search?keyword=女子看守所探监+等待中吸毒被捕)
+1. [京东数据：双11湖北购买力全国第十](https://so.toutiao.com/search?keyword=京东数据：双11湖北购买力全国第十)
+1. [这届年轻人双11消费变了](https://so.toutiao.com/search?keyword=这届年轻人双11消费变了)
+1. [越南宣判18人死刑 包括1名中国人](https://so.toutiao.com/search?keyword=越南宣判18人死刑+包括1名中国人)
+1. [双11京东手机销量榜：小米14第七](https://so.toutiao.com/search?keyword=双11京东手机销量榜：小米14第七)
+1. [以总理：战后加沙将“非军事化”](https://so.toutiao.com/search?keyword=以总理：战后加沙将“非军事化”)
+1. [扬科维奇表态：全力冲击世界杯](https://so.toutiao.com/search?keyword=扬科维奇表态：全力冲击世界杯)
+1. [东北一校8名男生集体穿军大衣上课](https://so.toutiao.com/search?keyword=东北一校8名男生集体穿军大衣上课)
+1. [以总理：将在必要时坚定与世界对抗](https://so.toutiao.com/search?keyword=以总理：将在必要时坚定与世界对抗)
+1. [一次性擦脚纸双十一销量暴涨2700%](https://so.toutiao.com/search?keyword=一次性擦脚纸双十一销量暴涨2700%)
 1. [多国爆发床虱危机](https://so.toutiao.com/search?keyword=多国爆发床虱危机)
+1. [佛山一村民公寓发生火灾](https://so.toutiao.com/search?keyword=佛山一村民公寓发生火灾)
+1. [打假人举报职校克扣学生巨额实习报酬](https://so.toutiao.com/search?keyword=打假人举报职校克扣学生巨额实习报酬)
+1. [张杰晒和三个女儿的背影照](https://so.toutiao.com/search?keyword=张杰晒和三个女儿的背影照)
+1. [双11国货崛起](https://so.toutiao.com/search?keyword=双11国货崛起)
+1. [东北大哥雪洞里吃火锅](https://so.toutiao.com/search?keyword=东北大哥雪洞里吃火锅)
+1. [男子喂猪时晕倒 遭猪啃食下半身](https://so.toutiao.com/search?keyword=男子喂猪时晕倒+遭猪啃食下半身)
+1. [狗子走丢17天见到主人高兴打鸣](https://so.toutiao.com/search?keyword=狗子走丢17天见到主人高兴打鸣)
+1. [拜登出席活动“犯迷糊”来回徘徊](https://so.toutiao.com/search?keyword=拜登出席活动“犯迷糊”来回徘徊)
+1. [“双十一”购物节在印尼成为潮流](https://so.toutiao.com/search?keyword=“双十一”购物节在印尼成为潮流)
+1. [崔永熙23分 广州龙狮大胜江苏](https://so.toutiao.com/search?keyword=崔永熙23分+广州龙狮大胜江苏)
+1. [侯友宜承诺当选重新协商ECFA](https://so.toutiao.com/search?keyword=侯友宜承诺当选重新协商ECFA)
+1. [儿媳为带公婆吃自助撒谎称只要10元](https://so.toutiao.com/search?keyword=儿媳为带公婆吃自助撒谎称只要10元)
+1. [南宁一医院涉卖出生证：原院长曾获刑](https://so.toutiao.com/search?keyword=南宁一医院涉卖出生证：原院长曾获刑)
+1. [男子聚餐将螃蟹放兜带回给老婆](https://so.toutiao.com/search?keyword=男子聚餐将螃蟹放兜带回给老婆)
+1. [网络招嫖被骗后自首还算不算嫖娼](https://so.toutiao.com/search?keyword=网络招嫖被骗后自首还算不算嫖娼)
+1. [为防止羊混群 主人把羊全染成绿色](https://so.toutiao.com/search?keyword=为防止羊混群+主人把羊全染成绿色)
+1. [老人反对装电梯建好又想用被拒绝](https://so.toutiao.com/search?keyword=老人反对装电梯建好又想用被拒绝)
+1. [成都进入速冻模式](https://so.toutiao.com/search?keyword=成都进入速冻模式)
+1. [上海男篮惜败 球迷却纷纷点赞](https://so.toutiao.com/search?keyword=上海男篮惜败+球迷却纷纷点赞)
+1. [日本一组织要求返还中国被掠夺文物](https://so.toutiao.com/search?keyword=日本一组织要求返还中国被掠夺文物)
+1. [周也吃相被吐槽](https://so.toutiao.com/search?keyword=周也吃相被吐槽)
+1. [闵鹿蕾为何在花甲之年再上岗](https://so.toutiao.com/search?keyword=闵鹿蕾为何在花甲之年再上岗)
+1. [中缅边境口岸每天大量中国籍人员入境](https://so.toutiao.com/search?keyword=中缅边境口岸每天大量中国籍人员入境)
+1. [肺炎支原体感染15个热点问题解答](https://so.toutiao.com/search?keyword=肺炎支原体感染15个热点问题解答)
+1. [飞虎队记忆](https://so.toutiao.com/search?keyword=飞虎队记忆)
+1. [地震频发 冰岛进入紧急状态](https://so.toutiao.com/search?keyword=地震频发+冰岛进入紧急状态)
+1. [广东最低温将出现在周二](https://so.toutiao.com/search?keyword=广东最低温将出现在周二)
+1. [网友不满杜兰特与詹姆斯比赛中谈笑](https://so.toutiao.com/search?keyword=网友不满杜兰特与詹姆斯比赛中谈笑)
+1. [记者探访取暖问题遭物业恐吓](https://so.toutiao.com/search?keyword=记者探访取暖问题遭物业恐吓)
+1. [巴称加沙网络和通信16日将完全停止](https://so.toutiao.com/search?keyword=巴称加沙网络和通信16日将完全停止)
+1. [黑龙江鸡西一批单位清雪不力被通报](https://so.toutiao.com/search?keyword=黑龙江鸡西一批单位清雪不力被通报)
 1. [杭州一公司招推箱子专家年薪24万](https://so.toutiao.com/search?keyword=杭州一公司招推箱子专家年薪24万)
 1. [白鹿为报秦霄贤的仇等了两个月](https://so.toutiao.com/search?keyword=白鹿为报秦霄贤的仇等了两个月)
 1. [湖南人的入冬仪式感](https://so.toutiao.com/search?keyword=湖南人的入冬仪式感)
-1. [男子聚餐将螃蟹放兜带回给老婆](https://so.toutiao.com/search?keyword=男子聚餐将螃蟹放兜带回给老婆)
 1. [爸爸喝醉把儿子忘地铁上了](https://so.toutiao.com/search?keyword=爸爸喝醉把儿子忘地铁上了)
 1. [T1力克JDG成功晋级S13决赛](https://so.toutiao.com/search?keyword=T1力克JDG成功晋级S13决赛)
 1. [宜兴市场发生伤人案？商户发声](https://so.toutiao.com/search?keyword=宜兴市场发生伤人案？商户发声)
-1. [日本一组织要求返还中国被掠夺文物](https://so.toutiao.com/search?keyword=日本一组织要求返还中国被掠夺文物)
 1. [新疆和田县政府驻地由和田市迁出](https://so.toutiao.com/search?keyword=新疆和田县政府驻地由和田市迁出)
-1. [儿媳为带公婆吃自助撒谎称只要10元](https://so.toutiao.com/search?keyword=儿媳为带公婆吃自助撒谎称只要10元)
 1. [今起上海部分地铁线路将临时管控](https://so.toutiao.com/search?keyword=今起上海部分地铁线路将临时管控)
-1. [双11国货崛起](https://so.toutiao.com/search?keyword=双11国货崛起)
 1. [湖南汽车坠江画面曝光 事发路段无护栏](https://so.toutiao.com/search?keyword=湖南汽车坠江画面曝光+事发路段无护栏)
 1. [飞猪双十一成交额同比增长超80%](https://so.toutiao.com/search?keyword=飞猪双十一成交额同比增长超80%)
-1. [张杰晒和三个女儿的背影照](https://so.toutiao.com/search?keyword=张杰晒和三个女儿的背影照)
-1. [一次性擦脚纸双十一销量暴涨2700%](https://so.toutiao.com/search?keyword=一次性擦脚纸双十一销量暴涨2700%)
 1. [沙特公司说与中国合作“亲如兄弟”](https://so.toutiao.com/search?keyword=沙特公司说与中国合作“亲如兄弟”)
 1. [黄日华否认将与关宝慧再婚](https://so.toutiao.com/search?keyword=黄日华否认将与关宝慧再婚)
 1. [男子上厕所马桶冒出浓烟燃起大火](https://so.toutiao.com/search?keyword=男子上厕所马桶冒出浓烟燃起大火)
@@ -92,7 +110,6 @@
 1. [江西省旅游集团董事长曾少雄被查](https://so.toutiao.com/search?keyword=江西省旅游集团董事长曾少雄被查)
 1. [足球报：中超多队遇生存危机](https://so.toutiao.com/search?keyword=足球报：中超多队遇生存危机)
 1. [媒体人点评骑士一周内双杀勇士](https://so.toutiao.com/search?keyword=媒体人点评骑士一周内双杀勇士)
-1. [为防止羊混群 主人把羊全染成绿色](https://so.toutiao.com/search?keyword=为防止羊混群+主人把羊全染成绿色)
 1. [SpaceX员工指责马斯克不顾风险](https://so.toutiao.com/search?keyword=SpaceX员工指责马斯克不顾风险)
 1. [记者实探贩卖出生证的福爱嘉医院](https://so.toutiao.com/search?keyword=记者实探贩卖出生证的福爱嘉医院)
 1. [女方悔婚不退彩礼被砍杀？警方介入](https://so.toutiao.com/search?keyword=女方悔婚不退彩礼被砍杀？警方介入)
@@ -237,7 +254,6 @@
 1. [拜登与阿曼苏丹讨论加沙事态发展](https://so.toutiao.com/search?keyword=拜登与阿曼苏丹讨论加沙事态发展)
 1. [来海南万宁体验冲浪乐趣](https://so.toutiao.com/search?keyword=来海南万宁体验冲浪乐趣)
 1. [陕西投资集团原董事长袁小宁被查](https://so.toutiao.com/search?keyword=陕西投资集团原董事长袁小宁被查)
-1. [起底贩卖出生证的佛山福爱嘉医院](https://so.toutiao.com/search?keyword=起底贩卖出生证的佛山福爱嘉医院)
 1. [火箭五连胜期间合计净胜对手89分](https://so.toutiao.com/search?keyword=火箭五连胜期间合计净胜对手89分)
 1. [曼联近5场英超4胜仅负曼城](https://so.toutiao.com/search?keyword=曼联近5场英超4胜仅负曼城)
 1. [国足36强赛首战泰国目标带回3分](https://so.toutiao.com/search?keyword=国足36强赛首战泰国目标带回3分)
