--- a/archives/toutiao-search/2023-11-12.md
+++ b/archives/toutiao-search/2023-11-12.md
@@ -1,43 +1,66 @@
 # 2023-11-12
 
-共 356 条
+共 372 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sun Nov 12 2023 22:14:58 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sun Nov 12 2023 23:00:52 GMT+0800 (China Standard Time) -->
 1. [警方公开通缉缅北果敢4名电诈头目](https://so.toutiao.com/search?keyword=警方公开通缉缅北果敢4名电诈头目)
-1. [大妈买海鱼红烧后半夜发绿光](https://so.toutiao.com/search?keyword=大妈买海鱼红烧后半夜发绿光)
-1. [100秒速览中国十年“网事”](https://so.toutiao.com/search?keyword=100秒速览中国十年“网事”)
 1. [阿里回应多款产品“崩了”](https://so.toutiao.com/search?keyword=阿里回应多款产品“崩了”)
-1. [低价硝烟下天猫京东公布双11战绩](https://so.toutiao.com/search?keyword=低价硝烟下天猫京东公布双11战绩)
-1. [官方通报企业家跳楼身亡：正调查](https://so.toutiao.com/search?keyword=官方通报企业家跳楼身亡：正调查)
+1. [100秒速览中国十年“网事”](https://so.toutiao.com/search?keyword=100秒速览中国十年“网事”)
 1. [菲警方发现6具遗体 2名死者为中国人](https://so.toutiao.com/search?keyword=菲警方发现6具遗体+2名死者为中国人)
-1. [男子杀人逃深山 养8只恶犬防身](https://so.toutiao.com/search?keyword=男子杀人逃深山+养8只恶犬防身)
-1. [起底贩卖出生证的佛山福爱嘉医院](https://so.toutiao.com/search?keyword=起底贩卖出生证的佛山福爱嘉医院)
+1. [低价硝烟下天猫京东公布双11战绩](https://so.toutiao.com/search?keyword=低价硝烟下天猫京东公布双11战绩)
+1. [大妈买海鱼红烧后半夜发绿光](https://so.toutiao.com/search?keyword=大妈买海鱼红烧后半夜发绿光)
+1. [利好来了 下周A股会起飞吗](https://so.toutiao.com/search?keyword=利好来了+下周A股会起飞吗)
 1. [大批中国公民滞留俄罗斯？官方回应](https://so.toutiao.com/search?keyword=大批中国公民滞留俄罗斯？官方回应)
+1. [这届年轻人双11消费变了](https://so.toutiao.com/search?keyword=这届年轻人双11消费变了)
+1. [美加州郡长：对中国有意见你去过吗](https://so.toutiao.com/search?keyword=美加州郡长：对中国有意见你去过吗)
 1. [媒体：加沙巷战以军“不败而败”](https://so.toutiao.com/search?keyword=媒体：加沙巷战以军“不败而败”)
 1. [广州一工地挖破燃气管道？假的](https://so.toutiao.com/search?keyword=广州一工地挖破燃气管道？假的)
 1. [镇长砸水瓶后村民拍桌回怼？当地回应](https://so.toutiao.com/search?keyword=镇长砸水瓶后村民拍桌回怼？当地回应)
-1. [利好来了 下周A股会起飞吗](https://so.toutiao.com/search?keyword=利好来了+下周A股会起飞吗)
-1. [美加州郡长：对中国有意见你去过吗](https://so.toutiao.com/search?keyword=美加州郡长：对中国有意见你去过吗)
-1. [女子看守所探监 等待中吸毒被捕](https://so.toutiao.com/search?keyword=女子看守所探监+等待中吸毒被捕)
 1. [京东数据：双11湖北购买力全国第十](https://so.toutiao.com/search?keyword=京东数据：双11湖北购买力全国第十)
-1. [这届年轻人双11消费变了](https://so.toutiao.com/search?keyword=这届年轻人双11消费变了)
-1. [越南宣判18人死刑 包括1名中国人](https://so.toutiao.com/search?keyword=越南宣判18人死刑+包括1名中国人)
+1. [官方通报企业家跳楼身亡：正调查](https://so.toutiao.com/search?keyword=官方通报企业家跳楼身亡：正调查)
+1. [女子看守所探监 等待中吸毒被捕](https://so.toutiao.com/search?keyword=女子看守所探监+等待中吸毒被捕)
 1. [双11京东手机销量榜：小米14第七](https://so.toutiao.com/search?keyword=双11京东手机销量榜：小米14第七)
-1. [以总理：战后加沙将“非军事化”](https://so.toutiao.com/search?keyword=以总理：战后加沙将“非军事化”)
-1. [扬科维奇表态：全力冲击世界杯](https://so.toutiao.com/search?keyword=扬科维奇表态：全力冲击世界杯)
-1. [东北一校8名男生集体穿军大衣上课](https://so.toutiao.com/search?keyword=东北一校8名男生集体穿军大衣上课)
-1. [以总理：将在必要时坚定与世界对抗](https://so.toutiao.com/search?keyword=以总理：将在必要时坚定与世界对抗)
+1. [英超：阿森纳3-1伯恩利暂升第二](https://so.toutiao.com/search?keyword=英超：阿森纳3-1伯恩利暂升第二)
 1. [一次性擦脚纸双十一销量暴涨2700%](https://so.toutiao.com/search?keyword=一次性擦脚纸双十一销量暴涨2700%)
+1. [张艺兴伴舞回应背带裤造型争议](https://so.toutiao.com/search?keyword=张艺兴伴舞回应背带裤造型争议)
+1. [以总理：战后加沙将“非军事化”](https://so.toutiao.com/search?keyword=以总理：战后加沙将“非军事化”)
+1. [以总理：将在必要时坚定与世界对抗](https://so.toutiao.com/search?keyword=以总理：将在必要时坚定与世界对抗)
+1. [媒体：以武装推土机碾压巴平民遗体](https://so.toutiao.com/search?keyword=媒体：以武装推土机碾压巴平民遗体)
+1. [阿尔特塔：红牌判罚是正确的](https://so.toutiao.com/search?keyword=阿尔特塔：红牌判罚是正确的)
+1. [拜登出席活动“犯迷糊”来回徘徊](https://so.toutiao.com/search?keyword=拜登出席活动“犯迷糊”来回徘徊)
+1. [这些“神药”成本不到1元](https://so.toutiao.com/search?keyword=这些“神药”成本不到1元)
+1. [周也吃相被吐槽](https://so.toutiao.com/search?keyword=周也吃相被吐槽)
+1. [冲突以来14320吨援助物资进入加沙](https://so.toutiao.com/search?keyword=冲突以来14320吨援助物资进入加沙)
+1. [红薯摊小狗有自己的被子和玩具](https://so.toutiao.com/search?keyword=红薯摊小狗有自己的被子和玩具)
 1. [多国爆发床虱危机](https://so.toutiao.com/search?keyword=多国爆发床虱危机)
+1. [重庆女生布置浪漫场景求婚男友](https://so.toutiao.com/search?keyword=重庆女生布置浪漫场景求婚男友)
+1. [当朋友无意间拍了张你巨好看的照片](https://so.toutiao.com/search?keyword=当朋友无意间拍了张你巨好看的照片)
+1. [男子杀人逃深山 养8只恶犬防身](https://so.toutiao.com/search?keyword=男子杀人逃深山+养8只恶犬防身)
+1. [中缅边境口岸每天大量中国籍人员入境](https://so.toutiao.com/search?keyword=中缅边境口岸每天大量中国籍人员入境)
+1. [陆家嘴：控股股东拟增持公司股票](https://so.toutiao.com/search?keyword=陆家嘴：控股股东拟增持公司股票)
+1. [《无价之宝》成都路演](https://so.toutiao.com/search?keyword=《无价之宝》成都路演)
+1. [东北一校8名男生集体穿军大衣上课](https://so.toutiao.com/search?keyword=东北一校8名男生集体穿军大衣上课)
+1. [三人跟路边雪人拍照后将雪人砸毁](https://so.toutiao.com/search?keyword=三人跟路边雪人拍照后将雪人砸毁)
+1. [男子喂猪时晕倒 遭猪啃食下半身](https://so.toutiao.com/search?keyword=男子喂猪时晕倒+遭猪啃食下半身)
+1. [日本一组织要求返还中国被掠夺文物](https://so.toutiao.com/search?keyword=日本一组织要求返还中国被掠夺文物)
+1. [成都进入速冻模式](https://so.toutiao.com/search?keyword=成都进入速冻模式)
+1. [男子饮酒30年患上罕见病](https://so.toutiao.com/search?keyword=男子饮酒30年患上罕见病)
+1. [张杰晒和三个女儿的背影照](https://so.toutiao.com/search?keyword=张杰晒和三个女儿的背影照)
+1. [网传东方雨虹1400多名员工亏超15亿](https://so.toutiao.com/search?keyword=网传东方雨虹1400多名员工亏超15亿)
+1. [马德龙综合征患者多为中年男性](https://so.toutiao.com/search?keyword=马德龙综合征患者多为中年男性)
+1. [今起上海部分地铁线路将临时管控](https://so.toutiao.com/search?keyword=今起上海部分地铁线路将临时管控)
+1. [国企领导车辆别停旅游客车？官方回应](https://so.toutiao.com/search?keyword=国企领导车辆别停旅游客车？官方回应)
+1. [华为官宣：2道题悬赏200万](https://so.toutiao.com/search?keyword=华为官宣：2道题悬赏200万)
+1. [东北大哥雪洞里吃火锅](https://so.toutiao.com/search?keyword=东北大哥雪洞里吃火锅)
+1. [CBA第8轮最佳阵容出炉](https://so.toutiao.com/search?keyword=CBA第8轮最佳阵容出炉)
+1. [起底贩卖出生证的佛山福爱嘉医院](https://so.toutiao.com/search?keyword=起底贩卖出生证的佛山福爱嘉医院)
+1. [越南宣判18人死刑 包括1名中国人](https://so.toutiao.com/search?keyword=越南宣判18人死刑+包括1名中国人)
+1. [扬科维奇表态：全力冲击世界杯](https://so.toutiao.com/search?keyword=扬科维奇表态：全力冲击世界杯)
 1. [佛山一村民公寓发生火灾](https://so.toutiao.com/search?keyword=佛山一村民公寓发生火灾)
 1. [打假人举报职校克扣学生巨额实习报酬](https://so.toutiao.com/search?keyword=打假人举报职校克扣学生巨额实习报酬)
-1. [张杰晒和三个女儿的背影照](https://so.toutiao.com/search?keyword=张杰晒和三个女儿的背影照)
 1. [双11国货崛起](https://so.toutiao.com/search?keyword=双11国货崛起)
-1. [东北大哥雪洞里吃火锅](https://so.toutiao.com/search?keyword=东北大哥雪洞里吃火锅)
-1. [男子喂猪时晕倒 遭猪啃食下半身](https://so.toutiao.com/search?keyword=男子喂猪时晕倒+遭猪啃食下半身)
 1. [狗子走丢17天见到主人高兴打鸣](https://so.toutiao.com/search?keyword=狗子走丢17天见到主人高兴打鸣)
-1. [拜登出席活动“犯迷糊”来回徘徊](https://so.toutiao.com/search?keyword=拜登出席活动“犯迷糊”来回徘徊)
 1. [“双十一”购物节在印尼成为潮流](https://so.toutiao.com/search?keyword=“双十一”购物节在印尼成为潮流)
 1. [崔永熙23分 广州龙狮大胜江苏](https://so.toutiao.com/search?keyword=崔永熙23分+广州龙狮大胜江苏)
 1. [侯友宜承诺当选重新协商ECFA](https://so.toutiao.com/search?keyword=侯友宜承诺当选重新协商ECFA)
@@ -47,12 +70,8 @@
 1. [网络招嫖被骗后自首还算不算嫖娼](https://so.toutiao.com/search?keyword=网络招嫖被骗后自首还算不算嫖娼)
 1. [为防止羊混群 主人把羊全染成绿色](https://so.toutiao.com/search?keyword=为防止羊混群+主人把羊全染成绿色)
 1. [老人反对装电梯建好又想用被拒绝](https://so.toutiao.com/search?keyword=老人反对装电梯建好又想用被拒绝)
-1. [成都进入速冻模式](https://so.toutiao.com/search?keyword=成都进入速冻模式)
 1. [上海男篮惜败 球迷却纷纷点赞](https://so.toutiao.com/search?keyword=上海男篮惜败+球迷却纷纷点赞)
-1. [日本一组织要求返还中国被掠夺文物](https://so.toutiao.com/search?keyword=日本一组织要求返还中国被掠夺文物)
-1. [周也吃相被吐槽](https://so.toutiao.com/search?keyword=周也吃相被吐槽)
 1. [闵鹿蕾为何在花甲之年再上岗](https://so.toutiao.com/search?keyword=闵鹿蕾为何在花甲之年再上岗)
-1. [中缅边境口岸每天大量中国籍人员入境](https://so.toutiao.com/search?keyword=中缅边境口岸每天大量中国籍人员入境)
 1. [肺炎支原体感染15个热点问题解答](https://so.toutiao.com/search?keyword=肺炎支原体感染15个热点问题解答)
 1. [飞虎队记忆](https://so.toutiao.com/search?keyword=飞虎队记忆)
 1. [地震频发 冰岛进入紧急状态](https://so.toutiao.com/search?keyword=地震频发+冰岛进入紧急状态)
@@ -68,7 +87,6 @@
 1. [T1力克JDG成功晋级S13决赛](https://so.toutiao.com/search?keyword=T1力克JDG成功晋级S13决赛)
 1. [宜兴市场发生伤人案？商户发声](https://so.toutiao.com/search?keyword=宜兴市场发生伤人案？商户发声)
 1. [新疆和田县政府驻地由和田市迁出](https://so.toutiao.com/search?keyword=新疆和田县政府驻地由和田市迁出)
-1. [今起上海部分地铁线路将临时管控](https://so.toutiao.com/search?keyword=今起上海部分地铁线路将临时管控)
 1. [湖南汽车坠江画面曝光 事发路段无护栏](https://so.toutiao.com/search?keyword=湖南汽车坠江画面曝光+事发路段无护栏)
 1. [飞猪双十一成交额同比增长超80%](https://so.toutiao.com/search?keyword=飞猪双十一成交额同比增长超80%)
 1. [沙特公司说与中国合作“亲如兄弟”](https://so.toutiao.com/search?keyword=沙特公司说与中国合作“亲如兄弟”)
@@ -99,7 +117,6 @@
 1. [王曼昱获WTT太原站女单冠军](https://so.toutiao.com/search?keyword=王曼昱获WTT太原站女单冠军)
 1. [费城76人官方通报乌布雷车祸情况](https://so.toutiao.com/search?keyword=费城76人官方通报乌布雷车祸情况)
 1. [记者在加沙医院连线时发生两次爆炸](https://so.toutiao.com/search?keyword=记者在加沙医院连线时发生两次爆炸)
-1. [红薯摊小狗有自己的被子和玩具](https://so.toutiao.com/search?keyword=红薯摊小狗有自己的被子和玩具)
 1. [从“双十一”看消费新态势](https://so.toutiao.com/search?keyword=从“双十一”看消费新态势)
 1. [2023济南章丘大葱喜迎丰收](https://so.toutiao.com/search?keyword=2023济南章丘大葱喜迎丰收)
 1. [双十一的一分钟中国物流发生了什么](https://so.toutiao.com/search?keyword=双十一的一分钟中国物流发生了什么)
@@ -123,7 +140,6 @@
 1. [长江存储在美国起诉美光](https://so.toutiao.com/search?keyword=长江存储在美国起诉美光)
 1. [库里谈打森林狼和雷霆：像打季后赛](https://so.toutiao.com/search?keyword=库里谈打森林狼和雷霆：像打季后赛)
 1. [13日至15日华北黄淮将有霾天气](https://so.toutiao.com/search?keyword=13日至15日华北黄淮将有霾天气)
-1. [网传东方雨虹1400多名员工亏超15亿](https://so.toutiao.com/search?keyword=网传东方雨虹1400多名员工亏超15亿)
 1. [学青会上的毽球运动是什么](https://so.toutiao.com/search?keyword=学青会上的毽球运动是什么)
 1. [泰国主帅：参加世界杯变得有希望了](https://so.toutiao.com/search?keyword=泰国主帅：参加世界杯变得有希望了)
 1. [学青会体操人才储备周期与奥运接轨](https://so.toutiao.com/search?keyword=学青会体操人才储备周期与奥运接轨)
