--- a/archives/toutiao-search/2023-11-13.md
+++ b/archives/toutiao-search/2023-11-13.md
@@ -1,58 +1,81 @@
 # 2023-11-13
 
-共 115 条
+共 137 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Nov 13 2023 08:25:53 GMT+0800 (China Standard Time) -->
-1. [中国通缉缅北电诈头目引外媒关注](https://so.toutiao.com/search?keyword=中国通缉缅北电诈头目引外媒关注)
+<!-- 最后更新时间 Mon Nov 13 2023 09:44:06 GMT+0800 (China Standard Time) -->
+1. [李佳琦双十一收入超250亿](https://so.toutiao.com/search?keyword=李佳琦双十一收入超250亿)
 1. [阿里回应多款产品“崩了”](https://so.toutiao.com/search?keyword=阿里回应多款产品“崩了”)
 1. [100秒速览中国十年“网事”](https://so.toutiao.com/search?keyword=100秒速览中国十年“网事”)
 1. [警方公开通缉缅北果敢4名电诈头目](https://so.toutiao.com/search?keyword=警方公开通缉缅北果敢4名电诈头目)
-1. [李佳琦双十一收入超250亿](https://so.toutiao.com/search?keyword=李佳琦双十一收入超250亿)
-1. [大妈买海鱼红烧后半夜发绿光](https://so.toutiao.com/search?keyword=大妈买海鱼红烧后半夜发绿光)
-1. [制片人可以内定演员吗](https://so.toutiao.com/search?keyword=制片人可以内定演员吗)
+1. [俄称拦截乌无人机 乌称摧毁俄导弹](https://so.toutiao.com/search?keyword=俄称拦截乌无人机+乌称摧毁俄导弹)
+1. [张译拒绝给狂飙实体书签名](https://so.toutiao.com/search?keyword=张译拒绝给狂飙实体书签名)
+1. [中国通缉缅北电诈头目引外媒关注](https://so.toutiao.com/search?keyword=中国通缉缅北电诈头目引外媒关注)
 1. [菲警方发现6具遗体 2名死者为中国人](https://so.toutiao.com/search?keyword=菲警方发现6具遗体+2名死者为中国人)
-1. [低价硝烟下天猫京东公布双11战绩](https://so.toutiao.com/search?keyword=低价硝烟下天猫京东公布双11战绩)
-1. [5人驾车坠江4人遇难 监控曝光](https://so.toutiao.com/search?keyword=5人驾车坠江4人遇难+监控曝光)
+1. [大妈买海鱼红烧后半夜发绿光](https://so.toutiao.com/search?keyword=大妈买海鱼红烧后半夜发绿光)
+1. [华为Mate60Pro本土零件价值占比47%](https://so.toutiao.com/search?keyword=华为Mate60Pro本土零件价值占比47%)
 1. [媒体：加沙巷战以军“不败而败”](https://so.toutiao.com/search?keyword=媒体：加沙巷战以军“不败而败”)
 1. [广州一工地挖破燃气管道？假的](https://so.toutiao.com/search?keyword=广州一工地挖破燃气管道？假的)
-1. [乔治26+7+7 快船不敌灰熊吞5连败](https://so.toutiao.com/search?keyword=乔治26+7+7+快船不敌灰熊吞5连败)
+1. [一高校被曝书记院长信箱对着摄像头](https://so.toutiao.com/search?keyword=一高校被曝书记院长信箱对着摄像头)
+1. [5人驾车坠江4人遇难 监控曝光](https://so.toutiao.com/search?keyword=5人驾车坠江4人遇难+监控曝光)
+1. [官方通报周大生与老凤祥员工互殴](https://so.toutiao.com/search?keyword=官方通报周大生与老凤祥员工互殴)
+1. [刘銮雄：并未对许家印生气](https://so.toutiao.com/search?keyword=刘銮雄：并未对许家印生气)
+1. [陈丽君李云霄颠覆戏曲界和娱乐圈](https://so.toutiao.com/search?keyword=陈丽君李云霄颠覆戏曲界和娱乐圈)
+1. [国企领导车辆别停旅游客车？官方回应](https://so.toutiao.com/search?keyword=国企领导车辆别停旅游客车？官方回应)
 1. [从“双十一”看消费新态势](https://so.toutiao.com/search?keyword=从“双十一”看消费新态势)
-1. [徐杰三分10中9砍下31分3板4助3断](https://so.toutiao.com/search?keyword=徐杰三分10中9砍下31分3板4助3断)
-1. [缅北四大家族魏超仁之子录忏悔视频](https://so.toutiao.com/search?keyword=缅北四大家族魏超仁之子录忏悔视频)
-1. [美加州郡长：对中国有意见你去过吗](https://so.toutiao.com/search?keyword=美加州郡长：对中国有意见你去过吗)
-1. [冰岛一天1400次地震](https://so.toutiao.com/search?keyword=冰岛一天1400次地震)
-1. [中科院院士钟万勰逝世](https://so.toutiao.com/search?keyword=中科院院士钟万勰逝世)
-1. [双11京东手机销量榜：小米14第七](https://so.toutiao.com/search?keyword=双11京东手机销量榜：小米14第七)
+1. [1名中国人被越南判处死刑](https://so.toutiao.com/search?keyword=1名中国人被越南判处死刑)
 1. [以总理：将在必要时坚定与世界对抗](https://so.toutiao.com/search?keyword=以总理：将在必要时坚定与世界对抗)
+1. [缅北四大家族成员称家族将杜绝电诈](https://so.toutiao.com/search?keyword=缅北四大家族成员称家族将杜绝电诈)
+1. [家中老人携带乙肝病毒能带孩子吗](https://so.toutiao.com/search?keyword=家中老人携带乙肝病毒能带孩子吗)
+1. [以总理：战后加沙将“非军事化”](https://so.toutiao.com/search?keyword=以总理：战后加沙将“非军事化”)
+1. [曹云金回应听云轩叫“干德云”](https://so.toutiao.com/search?keyword=曹云金回应听云轩叫“干德云”)
+1. [美加州郡长：对中国有意见你去过吗](https://so.toutiao.com/search?keyword=美加州郡长：对中国有意见你去过吗)
+1. [伊拉克武装组织对以色列发动袭击](https://so.toutiao.com/search?keyword=伊拉克武装组织对以色列发动袭击)
+1. [爱奇艺回应白鹿喊话](https://so.toutiao.com/search?keyword=爱奇艺回应白鹿喊话)
+1. [冰岛一天1400次地震](https://so.toutiao.com/search?keyword=冰岛一天1400次地震)
+1. [双11京东手机销量榜：小米14第七](https://so.toutiao.com/search?keyword=双11京东手机销量榜：小米14第七)
+1. [制片人可以内定演员吗](https://so.toutiao.com/search?keyword=制片人可以内定演员吗)
+1. [缅军战机被击落 战况更趋激烈](https://so.toutiao.com/search?keyword=缅军战机被击落+战况更趋激烈)
+1. [潜水员拍下海下地震景象](https://so.toutiao.com/search?keyword=潜水员拍下海下地震景象)
+1. [缅北四大家族魏超仁之子录忏悔视频](https://so.toutiao.com/search?keyword=缅北四大家族魏超仁之子录忏悔视频)
+1. [林志玲日本被偶遇一身行头超4万](https://so.toutiao.com/search?keyword=林志玲日本被偶遇一身行头超4万)
+1. [小男孩被忘在地铁上急坏一群大学生](https://so.toutiao.com/search?keyword=小男孩被忘在地铁上急坏一群大学生)
+1. [玻璃挡板现不明物体 疑为充气模特](https://so.toutiao.com/search?keyword=玻璃挡板现不明物体+疑为充气模特)
+1. [红薯摊小狗有自己的被子和玩具](https://so.toutiao.com/search?keyword=红薯摊小狗有自己的被子和玩具)
+1. [男子杀人逃深山 养8只恶犬防身](https://so.toutiao.com/search?keyword=男子杀人逃深山+养8只恶犬防身)
+1. [儿媳为带公婆吃自助撒谎称只要10元](https://so.toutiao.com/search?keyword=儿媳为带公婆吃自助撒谎称只要10元)
+1. [雨夜妈妈抱婴儿看薛之谦演唱会](https://so.toutiao.com/search?keyword=雨夜妈妈抱婴儿看薛之谦演唱会)
+1. [NASA拍到地球“凝视幽灵”](https://so.toutiao.com/search?keyword=NASA拍到地球“凝视幽灵”)
+1. [媒体：这次APEC会议对美国是个考验](https://so.toutiao.com/search?keyword=媒体：这次APEC会议对美国是个考验)
+1. [追梦回应批评：看起来非常愚蠢](https://so.toutiao.com/search?keyword=追梦回应批评：看起来非常愚蠢)
+1. [京东数据：双11湖北购买力全国第十](https://so.toutiao.com/search?keyword=京东数据：双11湖北购买力全国第十)
+1. [厄尔尼诺事件形成将带来哪些影响](https://so.toutiao.com/search?keyword=厄尔尼诺事件形成将带来哪些影响)
+1. [骑士主帅：追梦推人有预谋](https://so.toutiao.com/search?keyword=骑士主帅：追梦推人有预谋)
+1. [德约科维奇苦战三盘力克鲁内](https://so.toutiao.com/search?keyword=德约科维奇苦战三盘力克鲁内)
+1. [中国经济向好大势与通缩伪命题](https://so.toutiao.com/search?keyword=中国经济向好大势与通缩伪命题)
+1. [爸爸喝醉把儿子忘地铁上了](https://so.toutiao.com/search?keyword=爸爸喝醉把儿子忘地铁上了)
+1. [低价硝烟下天猫京东公布双11战绩](https://so.toutiao.com/search?keyword=低价硝烟下天猫京东公布双11战绩)
+1. [乔治26+7+7 快船不敌灰熊吞5连败](https://so.toutiao.com/search?keyword=乔治26+7+7+快船不敌灰熊吞5连败)
+1. [徐杰三分10中9砍下31分3板4助3断](https://so.toutiao.com/search?keyword=徐杰三分10中9砍下31分3板4助3断)
+1. [中科院院士钟万勰逝世](https://so.toutiao.com/search?keyword=中科院院士钟万勰逝世)
 1. [多国爆发床虱危机](https://so.toutiao.com/search?keyword=多国爆发床虱危机)
 1. [日本大阪府部分居民血检异常](https://so.toutiao.com/search?keyword=日本大阪府部分居民血检异常)
-1. [以总理：战后加沙将“非军事化”](https://so.toutiao.com/search?keyword=以总理：战后加沙将“非军事化”)
 1. [英超所有球队丢球数均破10](https://so.toutiao.com/search?keyword=英超所有球队丢球数均破10)
-1. [国企领导车辆别停旅游客车？官方回应](https://so.toutiao.com/search?keyword=国企领导车辆别停旅游客车？官方回应)
-1. [伊拉克武装组织对以色列发动袭击](https://so.toutiao.com/search?keyword=伊拉克武装组织对以色列发动袭击)
 1. [越南宣判18人死刑 包括1名中国人](https://so.toutiao.com/search?keyword=越南宣判18人死刑+包括1名中国人)
 1. [张艺兴伴舞服饰有点眼熟](https://so.toutiao.com/search?keyword=张艺兴伴舞服饰有点眼熟)
 1. [切尔西2023年第20次在英超率先丢球](https://so.toutiao.com/search?keyword=切尔西2023年第20次在英超率先丢球)
 1. [孙女医院输液太爷爷和爷爷心疼抹泪](https://so.toutiao.com/search?keyword=孙女医院输液太爷爷和爷爷心疼抹泪)
 1. [张艺兴伴舞回应背带裤造型争议](https://so.toutiao.com/search?keyword=张艺兴伴舞回应背带裤造型争议)
 1. [哈登亮相快船主场未获热烈欢呼](https://so.toutiao.com/search?keyword=哈登亮相快船主场未获热烈欢呼)
-1. [京东数据：双11湖北购买力全国第十](https://so.toutiao.com/search?keyword=京东数据：双11湖北购买力全国第十)
 1. [“村超”到港奔赴一场情谊之约](https://so.toutiao.com/search?keyword=“村超”到港奔赴一场情谊之约)
 1. [太平洋岛国担忧日本核污水排海威胁](https://so.toutiao.com/search?keyword=太平洋岛国担忧日本核污水排海威胁)
-1. [男子杀人逃深山 养8只恶犬防身](https://so.toutiao.com/search?keyword=男子杀人逃深山+养8只恶犬防身)
-1. [潜水员拍下海下地震景象](https://so.toutiao.com/search?keyword=潜水员拍下海下地震景象)
 1. [曼城4-4切尔西 哈兰德双响帕尔默绝平](https://so.toutiao.com/search?keyword=曼城4-4切尔西+哈兰德双响帕尔默绝平)
-1. [玻璃挡板现不明物体 疑为充气模特](https://so.toutiao.com/search?keyword=玻璃挡板现不明物体+疑为充气模特)
 1. [拜登出席活动“犯迷糊”来回徘徊](https://so.toutiao.com/search?keyword=拜登出席活动“犯迷糊”来回徘徊)
 1. [狐狸脑袋卡进杯子蹲在路边等待救援](https://so.toutiao.com/search?keyword=狐狸脑袋卡进杯子蹲在路边等待救援)
 1. [东北一校8名男生集体穿军大衣上课](https://so.toutiao.com/search?keyword=东北一校8名男生集体穿军大衣上课)
-1. [爱奇艺回应白鹿喊话](https://so.toutiao.com/search?keyword=爱奇艺回应白鹿喊话)
 1. [孙俪带儿女去看偶像陈奕迅演唱会](https://so.toutiao.com/search?keyword=孙俪带儿女去看偶像陈奕迅演唱会)
 1. [双11国货崛起](https://so.toutiao.com/search?keyword=双11国货崛起)
 1. [美媒：美国众议院已“完全失控”](https://so.toutiao.com/search?keyword=美媒：美国众议院已“完全失控”)
-1. [爸爸喝醉把儿子忘地铁上了](https://so.toutiao.com/search?keyword=爸爸喝醉把儿子忘地铁上了)
-1. [儿媳为带公婆吃自助撒谎称只要10元](https://so.toutiao.com/search?keyword=儿媳为带公婆吃自助撒谎称只要10元)
 1. [网传东方雨虹1400多名员工亏超15亿](https://so.toutiao.com/search?keyword=网传东方雨虹1400多名员工亏超15亿)
 1. [这届年轻人双11消费变了](https://so.toutiao.com/search?keyword=这届年轻人双11消费变了)
 1. [大批中国公民滞留俄罗斯？官方回应](https://so.toutiao.com/search?keyword=大批中国公民滞留俄罗斯？官方回应)
@@ -61,7 +84,6 @@
 1. [中缅边境口岸每天大量中国籍人员入境](https://so.toutiao.com/search?keyword=中缅边境口岸每天大量中国籍人员入境)
 1. [巴勒斯坦谴责以军袭击加沙医院](https://so.toutiao.com/search?keyword=巴勒斯坦谴责以军袭击加沙医院)
 1. [林高远林诗栋获WTT太原站男双冠军](https://so.toutiao.com/search?keyword=林高远林诗栋获WTT太原站男双冠军)
-1. [红薯摊小狗有自己的被子和玩具](https://so.toutiao.com/search?keyword=红薯摊小狗有自己的被子和玩具)
 1. [一次性擦脚纸双十一销量暴涨2700%](https://so.toutiao.com/search?keyword=一次性擦脚纸双十一销量暴涨2700%)
 1. [华为官宣：2道题悬赏200万](https://so.toutiao.com/search?keyword=华为官宣：2道题悬赏200万)
 1. [多地降温羽绒服价格大跳水](https://so.toutiao.com/search?keyword=多地降温羽绒服价格大跳水)
