--- a/archives/toutiao-search/2023-11-13.md
+++ b/archives/toutiao-search/2023-11-13.md
@@ -1,65 +1,81 @@
 # 2023-11-13
 
-共 151 条
+共 165 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Nov 13 2023 10:18:34 GMT+0800 (China Standard Time) -->
-1. [阿里回应多款产品“崩了”](https://so.toutiao.com/search?keyword=阿里回应多款产品“崩了”)
+<!-- 最后更新时间 Mon Nov 13 2023 11:00:42 GMT+0800 (China Standard Time) -->
+1. [李佳琦团队回应双十一收入250亿](https://so.toutiao.com/search?keyword=李佳琦团队回应双十一收入250亿)
 1. [警方公开通缉缅北果敢4名电诈头目](https://so.toutiao.com/search?keyword=警方公开通缉缅北果敢4名电诈头目)
 1. [100秒速览中国十年“网事”](https://so.toutiao.com/search?keyword=100秒速览中国十年“网事”)
-1. [李佳琦双十一收入超250亿](https://so.toutiao.com/search?keyword=李佳琦双十一收入超250亿)
+1. [小男孩被忘在地铁上急坏一群大学生](https://so.toutiao.com/search?keyword=小男孩被忘在地铁上急坏一群大学生)
 1. [中国通缉缅北电诈头目引外媒关注](https://so.toutiao.com/search?keyword=中国通缉缅北电诈头目引外媒关注)
-1. [张译拒绝给狂飙实体书签名](https://so.toutiao.com/search?keyword=张译拒绝给狂飙实体书签名)
+1. [住在山区月薪1万的工作你愿意做吗](https://so.toutiao.com/search?keyword=住在山区月薪1万的工作你愿意做吗)
 1. [菲警方发现6具遗体 2名死者为中国人](https://so.toutiao.com/search?keyword=菲警方发现6具遗体+2名死者为中国人)
+1. [阿里回应多款产品“崩了”](https://so.toutiao.com/search?keyword=阿里回应多款产品“崩了”)
 1. [大妈买海鱼红烧后半夜发绿光](https://so.toutiao.com/search?keyword=大妈买海鱼红烧后半夜发绿光)
-1. [华为Mate60Pro本土零件价值占比47%](https://so.toutiao.com/search?keyword=华为Mate60Pro本土零件价值占比47%)
-1. [国企领导车辆别停旅游客车？官方回应](https://so.toutiao.com/search?keyword=国企领导车辆别停旅游客车？官方回应)
+1. [重庆市原副市长熊雪被开除党籍](https://so.toutiao.com/search?keyword=重庆市原副市长熊雪被开除党籍)
+1. [腾讯辟谣马化腾称阿里云不如腾讯云](https://so.toutiao.com/search?keyword=腾讯辟谣马化腾称阿里云不如腾讯云)
 1. [媒体：加沙巷战以军“不败而败”](https://so.toutiao.com/search?keyword=媒体：加沙巷战以军“不败而败”)
-1. [广州一工地挖破燃气管道？假的](https://so.toutiao.com/search?keyword=广州一工地挖破燃气管道？假的)
-1. [林志玲日本被偶遇一身行头超4万](https://so.toutiao.com/search?keyword=林志玲日本被偶遇一身行头超4万)
-1. [陈丽君李云霄颠覆戏曲界和娱乐圈](https://so.toutiao.com/search?keyword=陈丽君李云霄颠覆戏曲界和娱乐圈)
-1. [5人驾车坠江4人遇难 监控曝光](https://so.toutiao.com/search?keyword=5人驾车坠江4人遇难+监控曝光)
-1. [缅军战机被击落 战况更趋激烈](https://so.toutiao.com/search?keyword=缅军战机被击落+战况更趋激烈)
 1. [1名中国人被越南判处死刑](https://so.toutiao.com/search?keyword=1名中国人被越南判处死刑)
-1. [刘銮雄：并未对许家印生气](https://so.toutiao.com/search?keyword=刘銮雄：并未对许家印生气)
-1. [曹云金回应听云轩叫“干德云”](https://so.toutiao.com/search?keyword=曹云金回应听云轩叫“干德云”)
-1. [从“双十一”看消费新态势](https://so.toutiao.com/search?keyword=从“双十一”看消费新态势)
+1. [男子父母被杀害后反杀对方父母儿子](https://so.toutiao.com/search?keyword=男子父母被杀害后反杀对方父母儿子)
+1. [5人驾车坠江4人遇难 监控曝光](https://so.toutiao.com/search?keyword=5人驾车坠江4人遇难+监控曝光)
+1. [张安达连胜丁俊晖火箭夺生涯首冠](https://so.toutiao.com/search?keyword=张安达连胜丁俊晖火箭夺生涯首冠)
+1. [国企领导车辆别停旅游客车？官方回应](https://so.toutiao.com/search?keyword=国企领导车辆别停旅游客车？官方回应)
+1. [林志玲日本被偶遇一身行头超4万](https://so.toutiao.com/search?keyword=林志玲日本被偶遇一身行头超4万)
+1. [张译拒绝给狂飙实体书签名](https://so.toutiao.com/search?keyword=张译拒绝给狂飙实体书签名)
+1. [“强砍槐树”事件谁该为损失买单](https://so.toutiao.com/search?keyword=“强砍槐树”事件谁该为损失买单)
 1. [以总理：战后加沙将“非军事化”](https://so.toutiao.com/search?keyword=以总理：战后加沙将“非军事化”)
-1. [缅北四大家族成员称家族将杜绝电诈](https://so.toutiao.com/search?keyword=缅北四大家族成员称家族将杜绝电诈)
-1. [联合国在加沙已收容78万流离失所者](https://so.toutiao.com/search?keyword=联合国在加沙已收容78万流离失所者)
 1. [以总理：将在必要时坚定与世界对抗](https://so.toutiao.com/search?keyword=以总理：将在必要时坚定与世界对抗)
+1. [缅北四大家族成员称家族将杜绝电诈](https://so.toutiao.com/search?keyword=缅北四大家族成员称家族将杜绝电诈)
+1. [哈马斯暂停人质谈判](https://so.toutiao.com/search?keyword=哈马斯暂停人质谈判)
+1. [刘銮雄：并未对许家印生气](https://so.toutiao.com/search?keyword=刘銮雄：并未对许家印生气)
+1. [红薯摊小狗有自己的被子和玩具](https://so.toutiao.com/search?keyword=红薯摊小狗有自己的被子和玩具)
+1. [伊拉克武装组织对以色列发动袭击](https://so.toutiao.com/search?keyword=伊拉克武装组织对以色列发动袭击)
+1. [从“双十一”看消费新态势](https://so.toutiao.com/search?keyword=从“双十一”看消费新态势)
+1. [上官正义受到国家卫健委的邀请](https://so.toutiao.com/search?keyword=上官正义受到国家卫健委的邀请)
+1. [弟弟骑玩具车跑向路口哥哥拼命抓住](https://so.toutiao.com/search?keyword=弟弟骑玩具车跑向路口哥哥拼命抓住)
+1. [爸爸喝醉把儿子忘地铁上了](https://so.toutiao.com/search?keyword=爸爸喝醉把儿子忘地铁上了)
+1. [北京已完成灾区房屋修缮约1万宅](https://so.toutiao.com/search?keyword=北京已完成灾区房屋修缮约1万宅)
+1. [华为Mate60Pro本土零件价值占比47%](https://so.toutiao.com/search?keyword=华为Mate60Pro本土零件价值占比47%)
+1. [一句公主请上车让陈丽君大脑宕机](https://so.toutiao.com/search?keyword=一句公主请上车让陈丽君大脑宕机)
+1. [缅军战机被击落 战况更趋激烈](https://so.toutiao.com/search?keyword=缅军战机被击落+战况更趋激烈)
+1. [未让大G加塞遭恶意别车？交警回应](https://so.toutiao.com/search?keyword=未让大G加塞遭恶意别车？交警回应)
+1. [美加州郡长：对中国有意见你去过吗](https://so.toutiao.com/search?keyword=美加州郡长：对中国有意见你去过吗)
+1. [主持人评国道收费：多听群众心声](https://so.toutiao.com/search?keyword=主持人评国道收费：多听群众心声)
+1. [NASA拍到地球“凝视幽灵”](https://so.toutiao.com/search?keyword=NASA拍到地球“凝视幽灵”)
+1. [潜水员拍下海下地震景象](https://so.toutiao.com/search?keyword=潜水员拍下海下地震景象)
+1. [缅北四大家族魏超仁之子录忏悔视频](https://so.toutiao.com/search?keyword=缅北四大家族魏超仁之子录忏悔视频)
+1. [伊拉克军方打死4名“IS”武装分子](https://so.toutiao.com/search?keyword=伊拉克军方打死4名“IS”武装分子)
+1. [曹云金回应听云轩叫“干德云”](https://so.toutiao.com/search?keyword=曹云金回应听云轩叫“干德云”)
+1. [双11京东手机销量榜：小米14第七](https://so.toutiao.com/search?keyword=双11京东手机销量榜：小米14第七)
+1. [《无价之宝》张译迎来年末首场考试](https://so.toutiao.com/search?keyword=《无价之宝》张译迎来年末首场考试)
+1. [佘诗曼参加朋友婚礼](https://so.toutiao.com/search?keyword=佘诗曼参加朋友婚礼)
+1. [冰岛一天1400次地震](https://so.toutiao.com/search?keyword=冰岛一天1400次地震)
+1. [陈丽君李云霄颠覆戏曲界和娱乐圈](https://so.toutiao.com/search?keyword=陈丽君李云霄颠覆戏曲界和娱乐圈)
+1. [拜登出席活动“犯迷糊”来回徘徊](https://so.toutiao.com/search?keyword=拜登出席活动“犯迷糊”来回徘徊)
+1. [日本大阪府部分居民血检异常](https://so.toutiao.com/search?keyword=日本大阪府部分居民血检异常)
+1. [李佳琦双十一收入超250亿](https://so.toutiao.com/search?keyword=李佳琦双十一收入超250亿)
+1. [广州一工地挖破燃气管道？假的](https://so.toutiao.com/search?keyword=广州一工地挖破燃气管道？假的)
+1. [联合国在加沙已收容78万流离失所者](https://so.toutiao.com/search?keyword=联合国在加沙已收容78万流离失所者)
 1. [俄称拦截乌无人机 乌称摧毁俄导弹](https://so.toutiao.com/search?keyword=俄称拦截乌无人机+乌称摧毁俄导弹)
 1. [以军空袭加沙地带南部 已致7人死亡](https://so.toutiao.com/search?keyword=以军空袭加沙地带南部+已致7人死亡)
 1. [以色列军队称已控制加沙城码头](https://so.toutiao.com/search?keyword=以色列军队称已控制加沙城码头)
-1. [红薯摊小狗有自己的被子和玩具](https://so.toutiao.com/search?keyword=红薯摊小狗有自己的被子和玩具)
-1. [一句公主请上车让陈丽君大脑宕机](https://so.toutiao.com/search?keyword=一句公主请上车让陈丽君大脑宕机)
-1. [伊拉克武装组织对以色列发动袭击](https://so.toutiao.com/search?keyword=伊拉克武装组织对以色列发动袭击)
 1. [制片人可以内定演员吗](https://so.toutiao.com/search?keyword=制片人可以内定演员吗)
-1. [弟弟骑玩具车跑向路口哥哥拼命抓住](https://so.toutiao.com/search?keyword=弟弟骑玩具车跑向路口哥哥拼命抓住)
 1. [美军空袭叙利亚境内军事设施](https://so.toutiao.com/search?keyword=美军空袭叙利亚境内军事设施)
 1. [媒体：这次APEC会议对美国是个考验](https://so.toutiao.com/search?keyword=媒体：这次APEC会议对美国是个考验)
-1. [冰岛一天1400次地震](https://so.toutiao.com/search?keyword=冰岛一天1400次地震)
-1. [爸爸喝醉把儿子忘地铁上了](https://so.toutiao.com/search?keyword=爸爸喝醉把儿子忘地铁上了)
-1. [美加州郡长：对中国有意见你去过吗](https://so.toutiao.com/search?keyword=美加州郡长：对中国有意见你去过吗)
-1. [潜水员拍下海下地震景象](https://so.toutiao.com/search?keyword=潜水员拍下海下地震景象)
 1. [英媒：双11中国电商巨头称销售增长](https://so.toutiao.com/search?keyword=英媒：双11中国电商巨头称销售增长)
 1. [马克西恩比德合砍87分 76人获8连胜](https://so.toutiao.com/search?keyword=马克西恩比德合砍87分+76人获8连胜)
 1. [哈登谈再度与威少合作](https://so.toutiao.com/search?keyword=哈登谈再度与威少合作)
-1. [双11京东手机销量榜：小米14第七](https://so.toutiao.com/search?keyword=双11京东手机销量榜：小米14第七)
 1. [马英九力挺“全民调”促蓝白合](https://so.toutiao.com/search?keyword=马英九力挺“全民调”促蓝白合)
 1. [女生拒绝相识8年男闺蜜告白后落泪](https://so.toutiao.com/search?keyword=女生拒绝相识8年男闺蜜告白后落泪)
 1. [小伙自觉身体健康婚检查出高血糖](https://so.toutiao.com/search?keyword=小伙自觉身体健康婚检查出高血糖)
 1. [狐狸脑袋卡进杯子蹲在路边等待救援](https://so.toutiao.com/search?keyword=狐狸脑袋卡进杯子蹲在路边等待救援)
-1. [NASA拍到地球“凝视幽灵”](https://so.toutiao.com/search?keyword=NASA拍到地球“凝视幽灵”)
 1. [雨夜妈妈抱婴儿看薛之谦演唱会](https://so.toutiao.com/search?keyword=雨夜妈妈抱婴儿看薛之谦演唱会)
 1. [莱昂纳德谈哈登交易后角色变化](https://so.toutiao.com/search?keyword=莱昂纳德谈哈登交易后角色变化)
-1. [未让大G加塞遭恶意别车？交警回应](https://so.toutiao.com/search?keyword=未让大G加塞遭恶意别车？交警回应)
 1. [一高校被曝书记院长信箱对着摄像头](https://so.toutiao.com/search?keyword=一高校被曝书记院长信箱对着摄像头)
 1. [官方通报周大生与老凤祥员工互殴](https://so.toutiao.com/search?keyword=官方通报周大生与老凤祥员工互殴)
 1. [家中老人携带乙肝病毒能带孩子吗](https://so.toutiao.com/search?keyword=家中老人携带乙肝病毒能带孩子吗)
 1. [爱奇艺回应白鹿喊话](https://so.toutiao.com/search?keyword=爱奇艺回应白鹿喊话)
-1. [缅北四大家族魏超仁之子录忏悔视频](https://so.toutiao.com/search?keyword=缅北四大家族魏超仁之子录忏悔视频)
-1. [小男孩被忘在地铁上急坏一群大学生](https://so.toutiao.com/search?keyword=小男孩被忘在地铁上急坏一群大学生)
 1. [玻璃挡板现不明物体 疑为充气模特](https://so.toutiao.com/search?keyword=玻璃挡板现不明物体+疑为充气模特)
 1. [男子杀人逃深山 养8只恶犬防身](https://so.toutiao.com/search?keyword=男子杀人逃深山+养8只恶犬防身)
 1. [儿媳为带公婆吃自助撒谎称只要10元](https://so.toutiao.com/search?keyword=儿媳为带公婆吃自助撒谎称只要10元)
@@ -74,7 +90,6 @@
 1. [徐杰三分10中9砍下31分3板4助3断](https://so.toutiao.com/search?keyword=徐杰三分10中9砍下31分3板4助3断)
 1. [中科院院士钟万勰逝世](https://so.toutiao.com/search?keyword=中科院院士钟万勰逝世)
 1. [多国爆发床虱危机](https://so.toutiao.com/search?keyword=多国爆发床虱危机)
-1. [日本大阪府部分居民血检异常](https://so.toutiao.com/search?keyword=日本大阪府部分居民血检异常)
 1. [英超所有球队丢球数均破10](https://so.toutiao.com/search?keyword=英超所有球队丢球数均破10)
 1. [越南宣判18人死刑 包括1名中国人](https://so.toutiao.com/search?keyword=越南宣判18人死刑+包括1名中国人)
 1. [张艺兴伴舞服饰有点眼熟](https://so.toutiao.com/search?keyword=张艺兴伴舞服饰有点眼熟)
@@ -85,7 +100,6 @@
 1. [“村超”到港奔赴一场情谊之约](https://so.toutiao.com/search?keyword=“村超”到港奔赴一场情谊之约)
 1. [太平洋岛国担忧日本核污水排海威胁](https://so.toutiao.com/search?keyword=太平洋岛国担忧日本核污水排海威胁)
 1. [曼城4-4切尔西 哈兰德双响帕尔默绝平](https://so.toutiao.com/search?keyword=曼城4-4切尔西+哈兰德双响帕尔默绝平)
-1. [拜登出席活动“犯迷糊”来回徘徊](https://so.toutiao.com/search?keyword=拜登出席活动“犯迷糊”来回徘徊)
 1. [东北一校8名男生集体穿军大衣上课](https://so.toutiao.com/search?keyword=东北一校8名男生集体穿军大衣上课)
 1. [孙俪带儿女去看偶像陈奕迅演唱会](https://so.toutiao.com/search?keyword=孙俪带儿女去看偶像陈奕迅演唱会)
 1. [双11国货崛起](https://so.toutiao.com/search?keyword=双11国货崛起)
